--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ board_build.partitions = partitions_example.csv
 board_build.filesystem_dir = spiffs
 framework = espidf
 monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 0
